# Snake-Game

./: CMakeLists.txt
.github/workflows/: ci.yml  test.yml
snake_game/: CMakeLists.txt
snake_game/src/: Makefile  board.cpp  board.h  main.cpp  sfml-app  snake.cpp  snake.h
snake_game/src/Exception/: GameOverException.h
snake_game/tests/: snake_test.cpp
src/: CMakeLists.txt  board.cpp  board.h  main.cpp  sfml-app  snake.cpp  snake.h
src/Constant/: constant.h
tests/: snake_test.cpp
